--- a/src/main/webapp/views/cadastro.html
+++ b/src/main/webapp/views/cadastro.html
@@ -97,10 +97,10 @@
 			<div class="form-group" ng-show="tipo == 'revenda'">
 			    <label for="endereco" class="col-sm-3 control-label">Digite o Endereço</label>
 			    <div class="col-sm-5">
-					<input type="text" class="form-control" id="endereco" placeholder="Ex: rua xxx, av. yyyy">
+					<input type="text" class="form-control" id="endereco" ng-model="endereco" placeholder="Ex: rua xxx, av. yyyy">
 			    </div>
 			    <div class="col-sm-3">
-			    	<button class="btnCadastro" style="margin:0">
+			    	<button type="button" class="btnCadastro" style="margin:0" ng-click="geocode()">
 			    		<span class="glyphicon glyphicon-search"></span>
 			    		Buscar
 		    		</button>
