--- a/src/main/webapp/views/cadastroAnuncio.html
+++ b/src/main/webapp/views/cadastroAnuncio.html
@@ -58,10 +58,24 @@
 			</div>
 			<div class="form-group">
 			    <label for="preco" class="col-sm-3 control-label">Preço</label>
-			    <div class="col-sm-8">
-					<input type="text" class="form-control" id="preco" ui-money-mask placeholder="Preço" ng-model="anuncio.valor" required>
+			    <div class="col-xs-2 col-sm-3 col-lg-4">
+					<input type="text" class="form-control" id="preco" ui-money-mask placeholder="Preço" ng-model="anuncio.valor" required>					
+			    </div>
+			    <div class="col-xs-4">
+			    	<button type="button" style="margin:0" class="btn btnAzul pull-left" ng-click="consultaFipe()">
+						<span class="glyphicon glyphicon-search"></span>
+						Consultar Preço na FIPE
+					</button>
 			    </div>
 			</div>
+			
+			<div class="form-group">
+				<div class="col-sm-3"></div>
+			    <div class="col-sm-8">
+			    	<alert type="danger" close="fechar()" ng-show="fipeErro">{{fipeErro}}</alert>
+		    	</div>
+			</div>
+			
 			<div class="form-group">
 			    <label for="acessorios" class="col-sm-3 control-label">Acessórios</label>
 			    <div class="col-sm-4">
