--- a/src/main/webapp/views/login.html
+++ b/src/main/webapp/views/login.html
@@ -9,7 +9,7 @@
 	<div class="formContainer">
 		<form class="form-horizontal">
 			<div class="page-header">
-					<h3 class="text-center">Acesso ao sistema</h3>
+					<h3 class="text-center">Acesso ao Sistema</h3>
 					<span class="help-block text-center">Preencha os dados de seu login para acessar o sistema.</span>
 				</div>	
 				<div class="form-group">
