--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -244,7 +244,7 @@ header{
 	/*background-color: #00528E;*/
 	display: none;
 	width: 326px;
-	height: 350px; 
+	height: 300px; 
 	float: left;
 	background: #FFF;
 	position: absolute;
@@ -817,4 +817,15 @@ header{
 }
 .revenda{
 	background: url('../img/revenda.png') no-repeat center;
+}
+.textContato{
+	line-height:40px;
+	font-weight:400;
+	font-size:10pt;
+}
+.titleContato{
+	line-height:40px;
+	font-weight:500;
+	font-size:10pt;
+	padding:0;
 }
