--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -168,24 +168,14 @@ header{
 	
 	#buscaTopo{
 		margin: 12px auto;	
-		width: 30%;
+		width: 50%;
 		float: right;
 		color: #333333;
 		border: 1px solid #fff;
-		-webkit-border-top-left-radius: 3px;
-		-webkit-border-bottom-left-radius: 3px;
-		-moz-border-radius-topleft: 3px;
-		-moz-border-radius-bottomleft: 3px;
-		border-top-left-radius: 3px;
-		border-bottom-left-radius: 3px;
-		-webkit-border-top-right-radius: 0px;
-		-webkit-border-bottom-right-radius: 0px;
-		-moz-border-radius-topright: 0px;
-		-moz-border-radius-bottomright: 0px;
-		border-top-right-radius: 0px;
-		border-bottom-right-radius: 0px;
+		border-radius:3px;
 		box-shadow: none;
-		color: #0065ae;
+		color: #0065ae; 
+		margin-right:10px; 
 	}
 	#tituloBusca{
 		float: right;
@@ -479,6 +469,32 @@ header{
 	border:1px solid #0482d6;
 	color: #0482d6;
 	font-size: 13px;
+	font-weight:200;
+	border-radius:3px;
+	padding:0;
+	background-color: transparent;
+	text-decoration: none;
+	
+	&:hover{
+		background-color: #0482d6;
+		border:1px solid #0482d6;
+		color: #FFF;
+		-webkit-transition: background-color 0.5s ease;
+		-moz-transition: background-color 0.5s ease;
+		-o-transition: background-color 0.5s ease;
+		transition: background-color 0.5s ease;
+	}
+}
+
+.btnMapa{ 
+	float: right;
+	margin:0;
+	width: 80px;
+	height: 25px;
+	line-height: 25px;
+	border:1px solid #0482d6;
+	color: #FFF; 
+	font-size: 13px; 
 	font-weight:200;
 	border-radius:3px;
 	padding:0;
@@ -828,4 +844,24 @@ header{
 	font-weight:500;
 	font-size:10pt;
 	padding:0;
+}
+.legend {
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: rgba(255,255,255, 0.9);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    padding: 6px 8px;
+    width: 250px; 
+    line-height: 18px;
+    color: #555;
+}
+.legend i {
+    width: 16px;
+    height: 16px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
+.legend .outline{
+	margin:5px;
 }
