--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -488,8 +488,8 @@ header{
 
 .btnMapa{ 
 	float: right;
-	margin:0;
-	width: 80px;
+	margin:0 5px 0 0;
+	width: 90px;
 	height: 25px;
 	line-height: 25px;
 	border:1px solid #0482d6;
@@ -510,6 +510,11 @@ header{
 		-o-transition: background-color 0.5s ease;
 		transition: background-color 0.5s ease;
 	}
+}
+.btnMapa.ativo{
+	background-color: #0482d6;
+	border:1px solid #0482d6;
+	color: #FFF;
 }
 .btnFavorito{
 	float: right;
@@ -851,12 +856,12 @@ header{
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     border-radius: 5px;
     padding: 6px 8px;
-    width: 250px; 
+    width: 270px; 
     line-height: 18px;
     color: #555;
 }
 .legend i {
-    width: 16px;
+    width: 16px; 
     height: 16px;
     float: left;
     margin-right: 8px;
