--- a/src/main/webapp/views/mapa.html
+++ b/src/main/webapp/views/mapa.html
@@ -1,19 +1,13 @@
 <meta charset="UTF-8">
 
 <div id="barraTopo" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 pull-left">
-<!--     <div class="col-xs-3" id="filtroTopo"> -->
-<!--        	<span>Filtros</span> -->
-       	
-<!--    	</div> -->
-   	
    	<div class="col-xs-3">
-<!--    		<span id="iconeBusca" class="glyphicon glyphicon-search"></span> -->
 		<span id="tituloBusca" class="pull-left">Busca</span>
 		<input type="text" class="form-control pull-left" id="buscaTopo" placeHolder="Onix, Fiesta, etc..." ng-model="filtro.modelo">
 		<span class="glyphicon glyphicon-menu-down pull-left" id="setaFiltro" enable-menu></span>
    	</div>
         	
-   	<div class="col-xs-4">
+   	<div class="col-xs-5">
 		<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Remover filtro por preço" ng-show="filtro.preco.ativo" ng-click="limparFiltro('preco')">
 			<span class="closeFilter"></span>
 			<span class="iconeFiltroTopo filtroPreco"></span>
@@ -44,16 +38,24 @@
 		</div>
 	</div>
 	
-	<div class="col-xs-3 pull-right">
-		<button ng-show="!layers.overlays.potencial_bairros.visible"  class="pull-right btnMapa" ng-click="ativarEstatistica()" style="margin-top:16px;">
-			<span class="glyphicon glyphicon-globe"></span>
-			Ativar
+	<div class="col-xs-4 pull-right">
+		<button ng-show="!layers.overlays.potencial_preco_bairros.visible"  class="pull-right btnMapa" ng-click="ativarEstatistica('potencial_preco_bairros')" tooltip-placement="bottom" tooltip="Clique para ativar o mapa sobre a quantidade de automóveis acima de R$ 85.000,00 em cada bairro. Com este mapa é possível identificar zonas para venda de automóveis de maior valor." style="margin-top:16px;">
+			<span class="glyphicon glyphicon-usd"></span>
+			Preço
 		</button>
-		<button ng-show="layers.overlays.potencial_bairros.visible" class="pull-right btnMapa" ng-click="desativarEstatistica()" style="margin-top:16px;">
-			<span class="glyphicon glyphicon-globe"></span>
-			Desativar
+		<button ng-show="layers.overlays.potencial_preco_bairros.visible" class="pull-right btnMapa ativo" ng-click="desativarEstatistica()"  tooltip-placement="bottom" tooltip="Desativar Mapa" style="margin-top:16px;">
+			<span class="glyphicon glyphicon-usd"></span>
+			Preço
 		</button>
-		<span id="tituloBusca" class="pull-right">Estatísticas</span>
+		<button ng-show="!layers.overlays.potencial_bairros.visible"  class="pull-right btnMapa" ng-click="ativarEstatistica('potencial_bairros')"  tooltip-placement="bottom" tooltip="Clique para ativar o mapa sobre a quantidade de anúncios ativos em cada bairro. Com este mapa é possível identifcar zonas favoráveis para venda de autmóveis" style="margin-top:16px;">
+			<span class="glyphicon glyphicon-globe"></span>
+			Potencial
+		</button>
+		<button ng-show="layers.overlays.potencial_bairros.visible" class="pull-right btnMapa ativo" ng-click="desativarEstatistica()"  tooltip-placement="bottom" tooltip="Desativar Mapa" style="margin-top:16px;">
+			<span class="glyphicon glyphicon-globe"></span>
+			Potencial
+		</button>
+		<span id="tituloBusca" class="pull-right">Mapas Estatísticos</span>
 	</div>
 </div>
 
