--- a/src/main/webapp/views/cadastroAnuncio.html
+++ b/src/main/webapp/views/cadastroAnuncio.html
@@ -158,6 +158,10 @@
 						<span class="glyphicon glyphicon-plus"></span>
 						Cadastrar
 					</button>
+					<button style="margin-right:10px;" type="submit" class="btn btnFavorito" ng-click="go('/anuncios')">
+						<span class="glyphicon glyphicon-remove"></span>
+						Cancelar
+					</button>
 				</div>
 			</div>
 		</form>
