--- a/src/main/webapp/views/tipoCadastro.html
+++ b/src/main/webapp/views/tipoCadastro.html
@@ -5,12 +5,13 @@
 <div class="col-sm-8  col-sm-offset-2">
 	
 	<div class="page-header-autogeo">
-		<h3 class="text-left col-xs-12">Selecione o tipo de cadastro</h3>
+		<h3 class="text-left col-xs-12">Quem é você?</h3>
 	</div>
+	
 
 	<div class="col-sm-6" style="border-right:1px solid #DDD;height:310px;margin-top: 50px;">
 		<span class="imgCadastro particular"></span>
-		<h5 class="text-center">Cadastro de Usuário Particular</h5>
+		<h5 class="text-center">Usuário Particular</h5>
 		<div style="height:60px;">
 			<p>Cadastre seu usuário para começar a anunciar seus automóveis.</p>
 		</div>
@@ -18,7 +19,7 @@
 	</div>
 	<div class="col-sm-6" style="margin-top: 50px;">
 		<span class="imgCadastro revenda"></span>
-		<h5 class="text-center">Cadastro de Revenda/Loja</h5>
+		<h5 class="text-center">Revenda/Loja</h5>
 		<div style="height:60px;">
 			<p>Cadastre seu estabelecimento comercial e começe a publicar seus automóveis agora mesmo.</p>
 		</div>
