--- a/src/main/webapp/views/mapa.html
+++ b/src/main/webapp/views/mapa.html
@@ -4,7 +4,7 @@
    	<div class="col-xs-3">
 		<span id="tituloBusca" class="pull-left">Busca</span>
 		<input type="text" class="form-control pull-left" id="buscaTopo" placeHolder="Onix, Fiesta, etc..." ng-model="filtro.modelo">
-		<span class="glyphicon glyphicon-menu-down pull-left" id="setaFiltro" enable-menu></span>
+		<span class="glyphicon glyphicon-menu-down pull-left" tooltip-placement="right" tooltip="Filtros Avançados" id="setaFiltro" enable-menu></span>
    	</div>
         	
    	<div class="col-xs-5">
