--- a/src/main/webapp/views/editarAnuncio.html
+++ b/src/main/webapp/views/editarAnuncio.html
@@ -2,7 +2,7 @@
 
 <div class="col-sm-8 col-sm-offset-2">
 	<div style="margin-top: 25px;">
-		<alert ng-repeat="alert in alerts" type="{{alert.type}}">{{alert.msg}}</alert>
+		<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="2500" close="closeAlert($index)">{{alert.msg}}</alert>
 	</div>
 
 	<div class="page-header-autogeo">
@@ -115,6 +115,18 @@
 			<div class="form-group" style="padding:15px;" ng-hide="isLoja"> 
 				<leaflet defaults="defaults" center="center" markers="markers" width="100%" height="300"></leaflet>
 			</div>
+			
+<!-- 			<div class="page-header-autogeo" ng-show="anuncio.fotos.length > 0"> -->
+<!-- 				<h3 class="text-left col-xs-12">Fotos</h3> -->
+<!-- 			</div> -->
+			
+<!-- 			<div class="form-group" ng-show="anuncio.fotos.length > 0"> -->
+<!-- 				<ul id="fotosEdicao"> -->
+<!-- 			        <li ng-repeat="file in anuncio.fotos"> -->
+<!-- 			        	<img ng-src="dados/foto/{{anuncio.id}}/{{file.nome}}" alt="Automóvel" title="Automóvel" width="150" height="100" /> -->
+<!-- 			        </li> -->
+<!-- 			    </ul> -->
+<!-- 			</div> -->
 			
 			<div class="form-group">
 				<div class="col-sm-12">
