--- a/src/main/webapp/views/cadastroAnuncio.html
+++ b/src/main/webapp/views/cadastroAnuncio.html
@@ -79,23 +79,22 @@
 			
 			<div class="form-group">
 			    <label for="acessorios" class="col-sm-3 control-label">Acessórios</label>
-			    <div class="col-sm-4">
+			    <div class="col-sm-8">
 					<select id="acessorios" class="form-control" ng-options="option.acessorio for option in acessorios" ng-model="selectedAcessorio">
 						<option value="">Adicione os acessórios desejados</option>
 					</select>
 			    </div>
-			    <div class="col-sm-2">
-					<button type="button" style="margin:0" class="btn btnCadastro pull-left" ng-click="addAcessorio()">
+			    <div class="col-sm-12 pull-left" style="margin-top:10px;">
+					<button type="button" style="margin:0 50px 0 10px;" class="btn btnCadastro pull-right" ng-click="addAcessorio()">
 						<span class="glyphicon glyphicon-plus"></span>
 						Adicionar
 					</button>
-			    </div>
-			    <div class="col-sm-2" style="padding:0">
-					<button type="button" style="margin:0" class="btn btnFavorito pull-left" ng-click="limparAcessorios()">
+					<button type="button" style="margin:0" class="btn btnFavorito pull-right" ng-click="limparAcessorios()">
 						<span class="glyphicon glyphicon-trash"></span>
 						Limpar
 					</button>
 			    </div>
+			   
 			</div>
 			<div class="form-group">
 			    <label for="acessorios" class="col-sm-3 control-label">Acessórios Adicionados</label>
@@ -122,7 +121,7 @@
 			    <div class="col-sm-6">
 					<input type="text" class="form-control" id="endereco" ng-model="endereco" placeholder="Ex: rua xxx, av. yyyy">
 			    </div>
-			    <div class="col-sm-2">
+			    <div class="col-sm-3">
 			    	<button type="button" class="btnCadastro" style="margin:0" ng-click="geocode()">
 			    		<span class="glyphicon glyphicon-search"></span>
 			    		Buscar
